# bookstore-services

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.backend  LICENSE  Procfile  README.md  bookstore.py  docker-compose.yml  pyproject.toml  requirements.txt  run-tests.sh  start-dev-server.sh  wsgi.py
.github/workflows/: codeql-analysis.yml
bookstore/: __init__.py  commands.py  database.py  middleware.py  routes.py
bookstore/migrations/versions/: 79806ff4bae2_.py  d8319ff20428_.py  ee8ccaca6626_.py
bookstore/src/catalog/: __init__.py  entities.py
bookstore/src/purchase/: __init__.py  dto.py  entities.py  errors.py
bookstore/src/shared/: errors.py  repository.py
bookstore/tests/: conftest.py  repo_mock.py
bookstore/tests/test_cases/: ApplicationTestCase.py  IntegrationTestCase.py
bookstore_services/: __init__.py
bookstore_services/modules/books/: book_services.py
bookstore_services/storage/: books.json
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  commands.py  errors.py  middleware.py  routes.py
src/cart/: dto.py  errors.py
src/cart/endpoints/: cart_endpoints.py  checkout_endpoints.py
src/cart/services/: cart_services.py  checkout_services.py  coupon_service.py  coupon_services.py
src/catalog/: entities.py
src/catalog/endpoints/: product_endpoints.py
src/catalog/repo/: product_repo.py
src/product/: entities.py
src/purchase/: dto.py  entities.py  errors.py
storage/: coupons.json  products.json
tests/: conftest.py  product_repo_mock.py  repo_mock.py  test_bookstore_services.py
(+46 files in other folders)
