[tool.poetry]
name = "bookstore-services"
version = "0.1.0"
description = "Backend services para bookStore"
authors = ["Victor Mota <victor.vmt@outlook.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
